--- a/indexnew.html
+++ b/indexnew.html
@@ -8,60 +8,64 @@
 </head>
 <body>
     <form id="RegistrationForm">
-        <fieldset>
-            <legend><h1>STUDENT REGISTRATION FORM</h1></legend>
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" id="name" required>
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email">
-            </div>
-            <div>
-                <label for="website">Website:</label>
-                <input type="url" id="website">
-            </div>
-            <div>
-                <label>Gender:</label>
-                <input type="radio" id="male" name="gender">
-                <label for="male">Male</label>
-                <input type="radio" id="female" name="gender">
-                <label for="female">Female</label>
-                <input type="radio" id="others" name="gender">
-                <label for="others">Others</label>
-            </div>
-            <div>
-                <label for="dob">Date Of Birth:</label>
-                <input type="date" id="dob">
-            </div>
-            <div>
-                <label for="address">Address:</label>
-                <input type="text" id="address">
-            </div>
-            <div>
-                <label>Skills:</label>
-                <br>
-                <input type="checkbox" id="java">
-                <label for="java">JAVA</label>
-                <input type="checkbox" id="cpp">
-                <label for="cpp">C++</label>
-                <input type="checkbox" id="css">
-                <label for="css">CSS</label>
-                <input type="checkbox" id="html">
-                <label for="html">HTML</label>
-            </div>
-            <div>
-                <label for="photo">Photo:</label>
-                <input type="file" id="photo" required>
-            </div>
-            <div>
-                <button type="button" id="SubmitBtn">
-                <input type="Submit" value="Enroll Student">
-                <input type="Reset" value="Reset">
-            </div>
-        </fieldset>
-    </form>
+        <form id="RegistrationForm">
+            <fieldset>
+                <legend><h1>STUDENT REGISTRATION FORM</h1></legend>
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" required>
+                </div><br>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email">
+                </div><br>
+                <div>
+                    <label for="website">Website:</label>
+                    <input type="url" id="website">
+                </div><br>
+                <div>
+                    <label>Gender:</label>
+                    <input type="radio" id="male" name="gender" value="Male">
+                    <label for="male">Male</label>
+                    <input type="radio" id="female" name="gender" value="Female">
+                    <label for="female">Female</label>
+                    <input type="radio" id="others" name="gender" value="Others">
+                    <label for="others">Others</label>
+                </div><br>
+                <div>
+                    <label for="dob">Date Of Birth:</label>
+                    <input type="date" id="dob">
+                </div><br>
+                <div>
+                    <label for="address">Address:</label>
+                    <input type="text" id="address">
+                </div><br>
+                <div>
+                    <label>Skills:</label>
+                    <br>
+                    <input type="checkbox" id="JAVA" name="skills">
+                    <label for="JAVA">JAVA</label>
+                    <input type="checkbox" id="C++" name="skills">
+                    <label for="C++">C++</label>
+                    <input type="checkbox" id="CSS" name="skills">
+                    <label for="CSS">CSS</label>
+                    <input type="checkbox" id="HTML" name="skills">
+                    <label for="HTML">HTML</label>
+                    <input type="checkbox" id="PYTHON" name="skills">
+                    <label for="PYTHON">PYTHON</label>
+
+                </div><br>
+                <div>
+                    <label for="photo">Photo:</label>
+                    <input type="file" id="photo" required>
+                </div><br><br><br>
+                <div>
+                    <button type="button" id="SubmitBtn">
+                    <input type="Submit" value="Enroll Student">
+                    <input type="Reset" value="Reset">
+                </div><br>
+            </fieldset>
+        </form>
     <div id="displayArea"></div>
     <div class="enrolled-container">
         <h2>Enrolled Students</h2>
