--- a/indexnew.html
+++ b/indexnew.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form id="RegistrationForm">
         <form id="RegistrationForm">
-            <fieldset>
-                <legend><h1>STUDENT REGISTRATION FORM</h1></legend>
-                <div>
+            <legend><h1>STUDENT REGISTRATION FORM</h1></legend>
+            <fieldset>      
+                <div class="form-and-table-container">
+                    <form id="RegistrationForm">
+
                     <label for="name">Name:</label>
                     <input type="text" id="name" required>
-                </div><br>
+                </div>
                 <div>
                     <label for="email">Email:</label>
                     <input type="email" id="email">
@@ -60,10 +61,9 @@
                     <input type="file" id="photo" required>
                 </div><br><br><br>
                 <div>
-                    <button type="button" id="SubmitBtn">
-                    <input type="Submit" value="Enroll Student">
-                    <input type="Reset" value="Reset">
-                </div><br>
+                    <button type="button" id="SubmitBtn">Enroll Student</button>
+                    <button type="reset" id="ResetBtn">Reset</button>
+                </div>
             </fieldset>
         </form>
     <div id="displayArea"></div>
