--- a/indexnew.html
+++ b/indexnew.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="new">
         <form id="RegistrationForm">
             <legend>
                 <h1>STUDENT REGISTRATION FORM</h1>
             </legend>
-            <fieldset><div class="form-and-table-container">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" required>
+            <fieldset>
+                <div class="page-container">
+                    <div class="form-and-table-container">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" required>
+                    </div>
                 </div>
                 <div>
                     <label for="email">Email:</label>
@@ -65,13 +70,21 @@
                 </div>
             </fieldset>
         </form>
+
         <table id="enrolledTable">
-            <th colspan="2">Enrolled Student</th>
-            <tr><b><th>Image</th>
-                <th>Description</th></b></tr>
+            <tr>
+                <th colspan="2">Enrolled Student</th>
+            </tr>
+            <tr><b>
+                    <th>Image</th>
+                    <th>Description</th>
+                </b></tr>
+            <br>
+            </tr>
             <tbody id="enrolledData"></tbody>
         </table>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
