--- a/indexnew.html
+++ b/indexnew.html
@@ -16,7 +16,7 @@
                 <div class="page-container">
                     <div class="form-and-table-container">
                         <label for="name">Name:</label>
-                        <input type="text" id="name">
+                        <input type="text" id="name" required>
                     </div>
                 </div>
                 <div>
